[java-inspection] IDEA-369259 ISE: PsiTreeUtil.findSameElementInCopy (Cannot find parent file; element class: class com.intellij.psi.impl.source.PsiJavaCodeReferenceElementImpl)
- check the same file before imports

GitOrigin-RevId: 840eaecc96078a459f57ecb5cbfd8f1789d97dff